force-app/main/default/objects/Environment__c/fields/Credentials_Link__c.field-meta.xml
<CustomField>
    <fullName>Credentials_Link__c</fullName>
    <description>Don&apos;t store credentials here. Link to the Hive instead.</description>
    <label>Credentials Link</label>
    <type>Url</type>
</CustomField>